# CALF

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
bindings/: python_bindings.cpp
bindings/calf/: __init__.py  __main__.py
calf/: BaseLogger.h  JsonBaseLogger.h  StdOutLogger.h  StlLogger.h  SyscallLogger.h  constants.h
captura/: BaseLogger.h  JsonBaseLogger.h  StdOutLogger.h  StlLogger.h  SyscallLogger.h  constants.h
include/: BaseLogger.h  JsonBaseLogger.h  StlLogger.h  SyscallLogger.h
profiler/: README.md  __init__.py  __main__.py  app.py  loader.py  pyproject.toml  style.css  web.py
profiler/web/: app.js  index.html  style.css
src/: SyscallLogger.cpp
tests/: main.cpp
