[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CALF"
version = "0.1.0"
description = "CALF — CAPIO Logging Facility: interactive viewer and analyser for CALF structured JSON traces."
authors = [
    { name = "Marco Edoardo Santimaria", email = "marcoedoardo.santimaria@unito.it" }
]
readme = "./README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "tabulate>=0.9.0",
    "numpy>=1.24.0",
    "textual>=0.50.0",
    "alive_progress>=3.1.0"
]

[tool.setuptools]
packages = ["CALF"]
package-data = {"CALF" = ["style.css", "web/*"]}

[tool.setuptools.package-dir]
"CALF" = "."

[project.scripts]
calf = "CALF.__main__:main"
